zener-core/src/com/n8lm/zener/glsl/GLSL430Parser.java
/*
 * This file is part of Zener.
 *
 * Zener is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as
 * published by the Free Software Foundation, either version 3 of
 * the License, or any later version.
 *
 * Zener is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General
 * Public License along with Zener.  If not, see
 * <http://www.gnu.org/licenses/>.
 */

// Generated from GLSL430.g4 by ANTLR 4.2.2
package com.n8lm.zener.glsl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GLSL430Parser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ATTRIBUTE=1, BOOL=2, BREAK=3, BVEC2=4, BVEC3=5, BVEC4=6, DOUBLE=7, CONST=8, 
		CONTINUE=9, DISCARD=10, DO=11, DVEC2=12, DVEC3=13, DVEC4=14, ELSE=15, 
		FALSE=16, FLOAT=17, FOR=18, IF=19, IN=20, INOUT=21, INT=22, INVARIANT=23, 
		IVEC2=24, IVEC3=25, IVEC4=26, LAYOUT=27, LOCATION=28, MAT2=29, MAT3=30, 
		MAT4=31, OUT=32, RETURN=33, SAMPLER2D=34, SAMPLERCUBE=35, STRUCT=36, TRUE=37, 
		UNIFORM=38, UINT=39, UVEC2=40, UVEC3=41, UVEC4=42, VARYING=43, VEC2=44, 
		VEC3=45, VEC4=46, VOID=47, WHILE=48, FLAT=49, NOPERSPECTIVE=50, SMOOTH=51, 
		IDENTIFIER=52, FLOATCONSTANT=53, INTCONSTANT=54, BOOLCONSTANT=55, INC_OP=56, 
		DEC_OP=57, LE_OP=58, GE_OP=59, EQ_OP=60, NE_OP=61, AND_OP=62, OR_OP=63, 
		XOR_OP=64, MUL_ASSIGN=65, DIV_ASSIGN=66, ADD_ASSIGN=67, MOD_ASSIGN=68, 
		SUB_ASSIGN=69, LEFT_PAREN=70, RIGHT_PAREN=71, LEFT_BRACKET=72, RIGHT_BRACKET=73, 
		LEFT_BRACE=74, RIGHT_BRACE=75, DOT=76, COMMA=77, COLON=78, EQUAL=79, SEMICOLON=80, 
		BANG=81, DASH=82, TILDE=83, PLUS=84, STAR=85, SLASH=86, PERCENT=87, LEFT_ANGLE=88, 
		RIGHT_ANGLE=89, VERTICAL_BAR=90, CARET=91, AMPERSAND=92, QUESTION=93, 
		PREPROCESSOR=94, WHITESPACE=95, COMMENT=96, MULTILINE_COMMENT=97;
	public static final String[] tokenNames = {
		"<INVALID>", "'attribute'", "'bool'", "'break'", "'bvec2'", "'bvec3'", 
		"'bvec4'", "'double'", "'const'", "'continue'", "'discard'", "'do'", "'dvec2'", 
		"'dvec3'", "'dvec4'", "'else'", "'false'", "'float'", "'for'", "'if'", 
		"'in'", "'inout'", "'int'", "'invariant'", "'ivec2'", "'ivec3'", "'ivec4'", 
		"'layout'", "'location'", "'mat2'", "'mat3'", "'mat4'", "'out'", "'return'", 
		"'sampler2D'", "'samplerCube'", "'struct'", "'true'", "'uniform'", "'uint'", 
		"'uvec2'", "'uvec3'", "'uvec4'", "'varying'", "'vec2'", "'vec3'", "'vec4'", 
		"'void'", "'while'", "'flat'", "'noperspective'", "'smooth'", "IDENTIFIER", 
		"FLOATCONSTANT", "INTCONSTANT", "BOOLCONSTANT", "'++'", "'--'", "'<='", 
		"'>='", "'=='", "'!='", "'&&'", "'||'", "'^^'", "'*='", "'/='", "'+='", 
		"'%='", "'-='", "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", 
		"':'", "'='", "';'", "'!'", "'-'", "'~'", "'+'", "'*'", "'/'", "'%'", 
		"'<'", "'>'", "'|'", "'^'", "'&'", "'?'", "PREPROCESSOR", "WHITESPACE", 
		"COMMENT", "MULTILINE_COMMENT"
	};
	public static final int
		RULE_translation_unit = 0, RULE_variable_identifier = 1, RULE_primary_expression = 2, 
		RULE_postfix_expression = 3, RULE_primary_expression_or_function_call = 4, 
		RULE_integer_expression = 5, RULE_function_call = 6, RULE_function_call_generic = 7, 
		RULE_function_call_header = 8, RULE_function_identifier = 9, RULE_constructor_identifier = 10, 
		RULE_unary_expression = 11, RULE_unary_operator = 12, RULE_multiplicative_expression = 13, 
		RULE_additive_expression = 14, RULE_shift_expression = 15, RULE_relational_expression = 16, 
		RULE_equality_expression = 17, RULE_and_expression = 18, RULE_exclusive_or_expression = 19, 
		RULE_inclusive_or_expression = 20, RULE_logical_and_expression = 21, RULE_logical_xor_expression = 22, 
		RULE_logical_or_expression = 23, RULE_conditional_expression = 24, RULE_assignment_expression = 25, 
		RULE_assignment_operator = 26, RULE_expression = 27, RULE_constant_expression = 28, 
		RULE_declaration = 29, RULE_function_prototype = 30, RULE_function_declarator = 31, 
		RULE_function_header = 32, RULE_parameter_declaration = 33, RULE_parameter_qualifier = 34, 
		RULE_init_declarator_list = 35, RULE_single_declarator = 36, RULE_init_declarator = 37, 
		RULE_fully_specified_type = 38, RULE_type_qualifier = 39, RULE_layout_qualifier = 40, 
		RULE_storage_qualifier = 41, RULE_interpolation_qualifier = 42, RULE_type_specifier = 43, 
		RULE_struct_specifier = 44, RULE_struct_declaration_list = 45, RULE_struct_declaration = 46, 
		RULE_struct_declarator_list = 47, RULE_struct_declarator = 48, RULE_initializer = 49, 
		RULE_declaration_statement = 50, RULE_statement_no_new_scope = 51, RULE_simple_statement = 52, 
		RULE_compound_statement_with_scope = 53, RULE_statement_with_scope = 54, 
		RULE_compound_statement_no_new_scope = 55, RULE_statement_list = 56, RULE_expression_statement = 57, 
		RULE_selection_statement = 58, RULE_condition = 59, RULE_iteration_statement = 60, 
		RULE_for_init_statement = 61, RULE_for_rest_statement = 62, RULE_jump_statement = 63, 
		RULE_external_declaration = 64, RULE_function_definition = 65, RULE_field_selection = 66;
	public static final String[] ruleNames = {
		"translation_unit", "variable_identifier", "primary_expression", "postfix_expression", 
		"primary_expression_or_function_call", "integer_expression", "function_call", 
		"function_call_generic", "function_call_header", "function_identifier", 
		"constructor_identifier", "unary_expression", "unary_operator", "multiplicative_expression", 
		"additive_expression", "shift_expression", "relational_expression", "equality_expression", 
		"and_expression", "exclusive_or_expression", "inclusive_or_expression", 
		"logical_and_expression", "logical_xor_expression", "logical_or_expression", 
		"conditional_expression", "assignment_expression", "assignment_operator", 
		"expression", "constant_expression", "declaration", "function_prototype", 
		"function_declarator", "function_header", "parameter_declaration", "parameter_qualifier", 
		"init_declarator_list", "single_declarator", "init_declarator", "fully_specified_type", 
		"type_qualifier", "layout_qualifier", "storage_qualifier", "interpolation_qualifier", 
		"type_specifier", "struct_specifier", "struct_declaration_list", "struct_declaration", 
		"struct_declarator_list", "struct_declarator", "initializer", "declaration_statement", 
		"statement_no_new_scope", "simple_statement", "compound_statement_with_scope", 
		"statement_with_scope", "compound_statement_no_new_scope", "statement_list", 
		"expression_statement", "selection_statement", "condition", "iteration_statement", 
		"for_init_statement", "for_rest_statement", "jump_statement", "external_declaration", 
		"function_definition", "field_selection"
	};

	@Override
	public String getGrammarFileName() { return "GLSL430.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GLSL430Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Translation_unitContext extends ParserRuleContext {
		public External_declarationContext external_declaration(int i) {
			return getRuleContext(External_declarationContext.class,i);
		}
		public TerminalNode EOF() { return getToken(GLSL430Parser.EOF, 0); }
		public List<External_declarationContext> external_declaration() {
			return getRuleContexts(External_declarationContext.class);
		}
		public Translation_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translation_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSL430Listener ) ((GLSL430Listener)listener).enterTranslation_unit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSL430Listener ) ((GLSL430Listener)listener).exitTranslation_unit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLSL430Visitor ) return ((GLSL430Visitor<? extends T>)visitor).visitTranslation_unit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Translation_unitContext translation_unit() throws RecognitionException {
		Translation_unitContext _localctx = new Translation_unitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translation_unit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << BVEC2) | (1L << BVEC3) | (1L << BVEC4) | (1L << DOUBLE) | (1L << CONST) | (1L << DVEC2) | (1L << DVEC3) | (1L << DVEC4) | (1L << FLOAT) | (1L << IN) | (1L << INT) | (1L << INVARIANT) | (1L << IVEC2) | (1L << IVEC3) | (1L << IVEC4) | (1L << LAYOUT) | (1L << MAT2) | (1L << MAT3) | (1L << MAT4) | (1L << OUT) | (1L << SAMPLER2D) | (1L << SAMPLERCUBE) | (1L << STRUCT) | (1L << UNIFORM) | (1L << UINT) | (1L << UVEC2) | (1L << UVEC3) | (1L << UVEC4) | (1L << VEC2) | (1L << VEC3) | (1L << VEC4) | (1L << VOID) | (1L << FLAT) | (1L << NOPERSPECTIVE) | (1L << SMOOTH) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(134); external_declaration();
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(140); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_identifierContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(GLSL430Parser.IDENTIFIER, 0); }
		public Variable_identifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSL430Listener ) ((GLSL430Listener)listener).enterVariable_identifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSL430Listener ) ((GLSL430Listener)listener).exitVariable_identifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLSL430Visitor ) return ((GLSL430Visitor<? extends T>)visitor).visitVariable_identifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_identifierContext variable_identifier() throws RecognitionException {
		Variable_identifierContext _localctx = new Variable_identifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_variable_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Primary_expressionContext extends ParserRuleContext {
		public TerminalNode BOOLCONSTANT() { return getToken(GLSL430Parser.BOOLCONSTANT, 0); }
		public TerminalNode INTCONSTANT() { return getToken(GLSL430Parser.INTCONSTANT, 0); }
		public TerminalNode FLOATCONSTANT() { return getToken(GLSL430Parser.FLOATCONSTANT, 0); }
		public Variable_identifierContext variable_identifier() {
			return getRuleContext(Variable_identifierContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(GLSL430Parser.RIGHT_PAREN, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(GLSL430Parser.LEFT_PAREN, 0); }
		public Primary_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSL430Listener ) ((GLSL430Listener)listener).enterPrimary_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSL430Listener ) ((GLSL430Listener)listener).exitPrimary_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLSL430Visitor ) return ((GLSL430Visitor<? extends T>)visitor).visitPrimary_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Primary_expressionContext primary_expression() throws RecognitionException {
		Primary_expressionContext _localctx = new Primary_expressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_primary_expression);
		int _la;
		try {
			setState(150);
			switch (_input.LA(1)) {
			case FLOATCONSTANT:
			case INTCONSTANT:
			case BOOLCONSTANT:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FLOATCONSTANT) | (1L << INTCONSTANT) | (1L << BOOLCONSTANT))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(145); variable_identifier();
				}
				break;
			case LEFT_PAREN:
				enterOuterAlt(_localctx, 3);
				{
				setState(146); match(LEFT_PAREN);
				setState(147); expression();
				setState(148); match(RIGHT_PAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
